# airflow101

./: .gitignore  Pipfile  README.md  docker-compose.yaml  justfile  pyproject.toml
charts/demo/: Chart.yaml  values.yaml
dags/: helloer.py  ipinfo.py
