[tool.poetry]
name = "airflow101"
version = "0.1.0"
description = "How to use Apace Airflow for developing and monitoring workflows"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
